# bubble-llm-sim

./: .pre-commit-config.yaml  Makefile  README.md  chathistory.md  instructions.md  manifest.schema.json  moinas_pouget_2013.xlsx  pyproject.toml  pytest.ini  repair.py  repair_docs.py
.github/workflows/: ci.yml
configs/data_sources/: agent_default.yaml  human_default.yaml  moinas_pouget_2013.yaml
configs/experiments/: baseline_paper_faithful.yaml  mp2021_cap10000_rep10.yaml  mp2021_cap10000_rep20.yaml  mp2021_cap1_rep10.yaml  mp2021_cap1_rep20.yaml
data/raw/: moinas_pouget_2013.csv
docs/: agent_sdk_design.md  data_governance.md  environment_spec.md  simulation_guide.md  student_simulation_guide.md
eval/20260309T164439Z_baseline_paper_faithful/: eval_manifest.json  micro_bucket_metrics.parquet  micro_summary.json  report.md  run_health.json
eval/20260310T184226Z_baseline_paper_faithful/: calibration_summary.json  eval_manifest.json  leaderboard_row.json  macro_summary.json  micro_bucket_metrics.parquet  micro_summary.json  report.md  run_health.json
final_results/comparison/: final_report.md
final_results/replication/: final_comparison_table.csv
runs/20260309T164124Z_baseline_paper_faithful/: combined_traces.jsonl
runs/20260309T164439Z_baseline_paper_faithful/: combined_traces.jsonl
runs/20260310T183602Z_baseline_paper_faithful/: combined_traces.jsonl
runs/20260310T184226Z_baseline_paper_faithful/: combined_traces.csv  combined_traces.jsonl
scripts/: jsonl_to_csv.py  run_batch_experiments.sh  synthesize_human_data.py
src/bubble_sim/: cli.py
(+197 files in other folders)
